<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MaleHomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/your_files_numbers"/>
        <Spinner
            android:id="@+id/filesNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/layoutFileData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/file_status"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginEnd="8dp"/>
                <TextView
                    android:id="@+id/file_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:padding="12dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/balance"
                    android:textSize="32sp"
                    android:textColor="@color/black"
                    android:layout_marginEnd="8dp"/>
                <TextView
                    android:id="@+id/balance"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:textSize="32sp"
                    android:gravity="center"
                    android:padding="12dp"
                    android:textStyle="bold"
                    android:textColor="@color/red"
                    android:background="@drawable/circle"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/branch_number"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginEnd="8dp"/>
                <TextView
                    android:id="@+id/br_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:padding="12dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/branch_name"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginEnd="8dp"/>
                <TextView
                    android:id="@+id/br_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:padding="12dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/branch_phone"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginEnd="8dp"/>
                <TextView
                    android:id="@+id/br_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:padding="12dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="12dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/branch_address"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginEnd="8dp"/>
                <TextView
                    android:id="@+id/br_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:padding="12dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <TextView
                android:id="@+id/generalMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"
                android:textColor="@color/black"
                android:padding="16dp"
                android:background="@drawable/pay_message"/>

            <TextView
                android:id="@+id/paymentMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:padding="16dp"
                android:textColor="@color/white"
                android:layout_marginBottom="20dp"
                android:background="@drawable/message"/>

            <Button
                android:id="@+id/fawry"
                android:layout_width="match_parent"
                android:padding="16dp"
                android:backgroundTint="#FFC107"
                android:text="@string/fawry_pay"
                android:textColor="@color/black"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </ScrollView>


</LinearLayout>